--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,5 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
 # Now simply link against gtest or gtest_main as needed. Eg
-add_executable(LRUCache tests.cpp)
+add_executable(LRUCache test/tests.cpp include/LRUCache.hpp)
 target_link_libraries(LRUCache gtest)
